# devops-engineer-from-scratch-project-313

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  package.json  pyproject.toml
.configs/: nginx.conf
.github/workflows/: lint.yml  tests.yml
.scripts/: docker-entrypoint.sh
app/: config.py  db.py  main.py  models.py  routes.py  serializers.py  validators.py
tests/: test_app.py  test_docker_entrypoint.py
